<resources>
    <string name="lc_demo_device_detail_title">Device details</string>
    <string name="lc_demo_device_unbind_success">Unbind successfully</string>
    <string name="lc_demo_device_delete">Delete</string>

    <string name="lc_demo_device_update_tip">tips</string>
    <string name="lc_demo_device_update">Upgrade</string>
    <string name="lc_demo_device_begin_update">Start upgrade</string>
    <string name="lc_demo_device_updateing">upgrading</string>
    <string name="lc_demo_device_version_new">The latest version</string>
    <string name="lc_demo_device_version_current">current version</string>
    <string name="lc_demo_device_version_title">Device Firmware Version</string>
    <string name="lc_demo_device_version_new_tip">Currently the latest version</string>
    <string name="lc_demo_device_version_tips">Device Firmware Version</string>
    <string name="lc_demo_device_warn_setting">Alarm Setting</string>
    <string name="lc_demo_device_deployment_settings">Detection</string>
    <string name="lc_demo_device_cur_wifi">Network</string>
    <string name="lc_demo_device_name">Device Name</string>
    <string name="lc_demo_device_name_hint">Please enter the device name</string>
    <string name="lc_demo_device_type_tip">Device model</string>
    <string name="lc_demo_device_serial_tip">Serial NO</string>
    <string name="lc_demo_device_deployment_title">Detection</string>
    <string name="lc_demo_device_modify_success">Successfully modified</string>
    <string name="lc_demo_device_deployment_setting_time">Detection On</string>
    <string name="lc_demo_device_setting_time">Set Period</string>
    <string name="deployment_setting_time_description">Schedule detection periods for your device, duringwhich you will be alerted if an alarm is triggered.</string>
    <string name="deployment_setting_time_part">Detection On</string>
    <string name="deployment_time_part">Detection On</string>
    <string name="device_manager_save_failed">Failed to save</string>
    <string name="device_manager_choose_type">Select Type</string>
    <string name="common_save">Save</string>
    <string name="device_manager_add_period">Add Period</string>
    <string name="device_manager_no_more_than_six_periods">Add max 6 periods.</string>
    <string name="device_manager_period">Period</string>
    <string name="device_manager_time_set_tenmin_error">End time should be 10 minutes later than start time.</string>
    <string name="device_manager_end_time_less_than_start">End time should be 10 minutes later than start time</string>
    <string name="quick_response_not_save_hint">You haven\'t saved your settings. Are you sure you want to exit?</string>
    <string name="deployment_time_part_modify_success">Saving succeeded</string>


    <!--    SdCard-->
    <string name="sd_cards">SD</string>
    <string name="sd_no_cards">No SdCard</string>
    <string name="sd_common">Normal</string>
    <string name="sd_uncommon">Storage error</string>
    <string name="sd_local_store">Local Storage</string>
    <string name="sd_normal">Local storage is in a healthy state.</string>
    <string name="sd_use_space">Available：%1$sGB &#8195;&#8195; Used:%2$sGB</string>
    <string name="sd_use_space_gb">%1$sGB/%2$sGB</string>
    <string name="sd_memory_broken">SD Card has been damaged</string>
    <string name="sd_suggest_format">You are recommended to format the storage.</string>
    <string name="sd_start_format">Format</string>
    <string name="sd_formatting">Formatting… Please wait</string>
    <string name="sd_formatting_success">Formatted</string>
    <string name="sd_formatting_fail">Failed to format</string>
    <string name="sd_dialog_tip">Formatting will clear all the data in the Local Storage and it cannot be cancelled once implemented.</string>
    <string name="sd_btn_format">Format</string>
    <string name="lc_demo_device_cancel">Cancel</string>
    <string name="lc_demo_device_store_setting">Store Settings</string>
    <string name="lc_demo_device_setting_tip">Device Settings</string>
    <string name="sd_cloud">Cloud Storage</string>
    <string name="sd_notice">Notice</string>

    <string name="deploy_cancel">Cancel</string>
    <string name="lc_demo_device_update_msg">The upgrade process will last for a few minutes, please ensure that the device is powered off when upgrading</string>
    <string name="lc_demo_device_move_check">Motion detection</string>
    <string name="lc_demo_device_deployment_tip">Record videos and send notifications when motion is detected.Notifications must be enabled.</string>

</resources>
