<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="1000dp"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_70"
        android:layout_marginRight="@dimen/px_70"
        android:background="@drawable/sd_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/px_50"
            android:text="@string/sd_notice"
            android:textColor="@color/c2"
            android:textSize="@dimen/px_40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_50"
            android:layout_marginTop="@dimen/px_40"
            android:layout_marginRight="@dimen/px_50"
            android:text="@string/sd_dialog_tip"
            android:gravity="left"
            android:textColor="@color/c2"
            android:textSize="@dimen/px_32" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:layout_marginTop="@dimen/px_50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/px_90"
                android:layout_marginRight="@dimen/px_40"
                android:layout_marginLeft="@dimen/px_50"
                android:layout_marginBottom="@dimen/px_50"
                android:layout_weight="1"
                android:background="@drawable/sd_btn_border_grey"
                android:gravity="center"
                android:text="@string/lc_demo_device_cancel"
                android:textColor="@color/c11"
                android:textSize="@dimen/px_30" />


            <TextView
                android:id="@+id/tv_format"
                android:layout_width="0dp"
                android:layout_height="@dimen/px_90"
                android:layout_marginRight="@dimen/px_50"
                android:layout_marginLeft="@dimen/px_40"
                android:layout_weight="1"
                android:background="@drawable/sd_btn_border_orange"
                android:textSize="@dimen/px_30"
                android:gravity="center"
                android:text="@string/sd_btn_format"
                android:textColor="@color/c10"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>