<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.mm.android.mobilecommon.widget.CommonTitle
        android:id="@+id/common_title"
        android:layout_height="@dimen/px_88"
        android:background="@color/transparent"
        style="@style/mobile_common_common_title" />

    <TextView
        android:text="@string/deployment_time_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/c2"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:textSize="@dimen/sp_23" />


    <TextView
        android:text="@string/deployment_setting_time_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deployment_setting_time_part"
        android:paddingTop="@dimen/px_46"
        android:background="@color/c43"
        android:drawableEnd="@drawable/item_period_time_line_sample"
        android:drawablePadding="@dimen/dp_12"
        android:gravity="center_vertical|end"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:textSize="14sp"
        android:drawableRight="@drawable/item_period_time_line_sample" />

    <LinearLayout
        android:id="@+id/ll_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_period_sample"
        android:background="@color/c43"
        android:paddingTop="@dimen/px_60"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="24" />
    </LinearLayout>

    <ListView
        android:id="@+id/period_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_index"
        android:background="@color/c43"
        android:divider="@null"
        android:listSelector="@color/transparent"
        android:scrollbars="none"
        android:visibility="visible" />
</LinearLayout>